[gd_scene load_steps=18 format=3 uid="uid://y0c47jdk53jr"]

[ext_resource type="Script" path="res://scripts/gameplay/game/game.gd" id="1_qr4xs"]
[ext_resource type="PackedScene" uid="uid://br5cms0su4vur" path="res://scene/objects/bot.tscn" id="3_rjipp"]
[ext_resource type="Script" path="res://scripts/audio/Conductor.gd" id="4_c8hd5"]
[ext_resource type="AudioStream" uid="uid://up45eeo0mdlu" path="res://sounds/misc/ping.mp3" id="5_frwru"]
[ext_resource type="PackedScene" uid="uid://dysy0ojqquyh5" path="res://scene/gui/uppercutHandler.tscn" id="6_saj65"]
[ext_resource type="PackedScene" uid="uid://8gim7dabpts8" path="res://scene/gui/Textbox.tscn" id="7_46ewt"]
[ext_resource type="Texture2D" uid="uid://cyppctugmsom1" path="res://sprites/gui/healthbar_back.png" id="8_e3jn2"]
[ext_resource type="Texture2D" uid="uid://3xmr66s3v78d" path="res://sprites/gui/healthbar_front.png" id="9_uahyc"]
[ext_resource type="Texture2D" uid="uid://ddwo0umvxtpwc" path="res://sprites/gui/healthbar_fill.png" id="10_ott2q"]
[ext_resource type="Script" path="res://scripts/gui/HealthBar.gd" id="11_2hhkl"]
[ext_resource type="FontFile" uid="uid://jxerprayhk57" path="res://NintendoDSBIOS.ttf" id="13_4ow1o"]
[ext_resource type="AudioStream" uid="uid://cvi7pploxv3k3" path="res://sounds/cues/cuePunch.ogg" id="14_qha2r"]
[ext_resource type="PackedScene" uid="uid://b5a85et3hbvkt" path="res://scene/objects/player.tscn" id="14_wr018"]
[ext_resource type="AudioStream" uid="uid://bsggkfjlxek37" path="res://sounds/cues/cueLeft.ogg" id="15_lw7mt"]
[ext_resource type="AudioStream" uid="uid://kb5dy28f26gb" path="res://sounds/cues/cueRight.ogg" id="16_1ah81"]
[ext_resource type="AudioStream" uid="uid://c35lcylyp87vl" path="res://sounds/cues/cueParry.ogg" id="17_sb8dn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ixaoc"]
bg_color = Color(0, 0, 0, 0.466667)

[node name="Game" type="Node2D"]
script = ExtResource("1_qr4xs")

[node name="Stage" type="Node" parent="."]

[node name="Bot" parent="." instance=ExtResource("3_rjipp")]

[node name="Conductor" type="AudioStreamPlayer2D" parent="."]
bus = &"Music"
script = ExtResource("4_c8hd5")

[node name="UppercutTimer" type="Timer" parent="Conductor"]

[node name="Ping" type="AudioStreamPlayer2D" parent="Conductor"]
stream = ExtResource("5_frwru")
volume_db = -2.123
bus = &"SoundFX"

[node name="GUI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="GUI"]
offset_right = 256.0
offset_bottom = 195.0
color = Color(0, 0, 0, 0)

[node name="Flash" type="ColorRect" parent="GUI"]
offset_right = 256.0
offset_bottom = 195.0
color = Color(1, 1, 1, 0)

[node name="UppercutHandler" parent="GUI" instance=ExtResource("6_saj65")]
position = Vector2(128, 78)

[node name="Label" type="Label" parent="GUI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Textbox" parent="GUI" instance=ExtResource("7_46ewt")]
position = Vector2(32, 8)

[node name="HealthBar" type="TextureProgressBar" parent="GUI"]
offset_left = 16.0
offset_top = 8.0
offset_right = 24.0
offset_bottom = 184.0
max_value = 20.0
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2
texture_under = ExtResource("8_e3jn2")
texture_over = ExtResource("9_uahyc")
texture_progress = ExtResource("10_ott2q")
script = ExtResource("11_2hhkl")

[node name="Score" type="Label" parent="GUI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 78.0
offset_right = -8.0
offset_bottom = 101.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("13_4ow1o")
text = "Score: "

[node name="SkipText" type="Label" parent="GUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 48.0
offset_right = 40.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("13_4ow1o")
horizontal_alignment = 1
autowrap_mode = 2

[node name="SongName" type="Label" parent="GUI"]
offset_left = -56.0
offset_top = 160.0
offset_right = -16.0
offset_bottom = 183.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("13_4ow1o")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_ixaoc")

[node name="Player" parent="." instance=ExtResource("14_wr018")]
metadata/_edit_group_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(128, 136)
scale = Vector2(1, 0.944444)
limit_left = -60
limit_top = -35
limit_right = 315
limit_bottom = 190
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true
editor_draw_limits = true
metadata/_edit_group_ = true

[node name="Cues" type="Node" parent="."]

[node name="Hai" type="AudioStreamPlayer2D" parent="Cues"]
stream = ExtResource("14_qha2r")
volume_db = 5.0

[node name="Left" type="AudioStreamPlayer2D" parent="Cues"]
stream = ExtResource("15_lw7mt")
volume_db = 5.0

[node name="Right" type="AudioStreamPlayer2D" parent="Cues"]
stream = ExtResource("16_1ah81")
volume_db = 5.0

[node name="Parry" type="AudioStreamPlayer2D" parent="Cues"]
stream = ExtResource("17_sb8dn")
volume_db = 5.0

[connection signal="changeCamScale" from="Conductor" to="." method="_on_conductor_change_cam_scale"]
[connection signal="cueHit" from="Conductor" to="." method="_on_conductor_cue_hit"]
[connection signal="finished" from="Conductor" to="." method="_on_conductor_finished"]
[connection signal="textDisplay" from="Conductor" to="." method="_on_conductor_text_display"]
[connection signal="uppercutHit" from="Conductor" to="." method="_on_conductor_uppercut_hit"]
[connection signal="timeout" from="Conductor/UppercutTimer" to="Conductor" method="_on_uppercut_timer_timeout"]
[connection signal="hit_uc" from="GUI/UppercutHandler" to="." method="_on_uppercut_handler_hit_uc"]
[connection signal="miss_uc" from="GUI/UppercutHandler" to="." method="_on_uppercut_handler_miss_uc"]
[connection signal="hit_cue" from="Player" to="." method="_on_player_hit_cue"]
[connection signal="hit_cue" from="Player" to="Bot" method="_on_player_hit_cue"]
[connection signal="miss_cue" from="Player" to="Bot" method="_on_player_miss_cue"]
